syntax = "proto3";

option go_package = "pb";
option java_package = "org.zachary.hello";
option java_multiple_files = true;
option java_outer_classname = "HellowProto";

package hello;

service Greeter {
    // Sending hello message
    rpc SayHello (HelloRequest) returns (HelloResponse) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}